# tlsprofiler

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
tests/: Dockerfile  docker-compose.yml  function_tests.py  profile_tests.py  run_test.sh  run_tests.sh  test_profiler.py
tests/certificates/: create_certs.sh  ecdsa_ca_cert.pem  ecdsa_ca_key.pem  rsa_ca_cert.pem  rsa_ca_key.pem
tests/modern/: Dockerfile  httpd-ssl.conf  httpd.conf
tests/none/: Dockerfile  dhparams4096.pem  httpd-ssl.conf
tests/old/: Dockerfile  default.conf  dhparams1024.pem  httpd-ssl.conf
tlsprofiler/: __init__.py  cli.py  comparator.py  tlsprofiler_result.py  utils.py
